# web-search-plus-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
docs/: HOUND.md  MIGRATION_1_0.md  RELEASE_1_2.md
schemas/v3/: request.schema.json  response.schema.json
scripts/: gen_contract_v3_schemas.py
tests/: conftest.py  test_authority_matcher_hardening.py  test_cache_ownership.py  test_extract_disabled_providers.py  test_extract_priority.py  test_extract_truncate_store.py  test_extract_url_safety.py  test_firecrawl_provider.py  test_http_content_encoding.py  test_http_hardening_v015.py  test_issue_27_fallback.py  test_keenable_provider.py  test_mcp_v1_contract.py  test_parallel_provider.py  test_perplexity_provider_split.py  test_provider_conformance.py  test_provider_health.py  test_routing_v2.py  test_sdk_extract_cache_identity.py  test_serpbase_auto_allow.py  test_server_schema.py  test_state_migration_v3.py  test_state_store_v3.py  test_ui.py  test_v111_regressions.py  test_v302_entrypoint_regressions.py  test_v31_budget_preflight.py  test_v31_diversity.py  test_v31_extraction_cache.py  test_v31_selfhosted_profile.py  test_v31_shadow_policy.py  test_v31_spans.py
tests/providers_d/: _fixture_probe.py  test_discovery_failures.py  test_example_fixture.py  test_hound_provider.py  test_production_gate.py
web_search_plus_mcp/: __init__.py  attempt_engine_v3.py  bounded_context_v3.py  budget_preflight_v3.py  cache.py  cache_identity_v3.py  cache_v3.py  compat_v3.py  config.py  contract_v3.py  daemon_tasks.py  diversity_v3.py  env_loader.py  errors_v3.py  extract.py  http_client.py  independence_v3.py  orchestrator_v3.py  provider_adapter_protocol.py  provider_dispatch.py  provider_health.py  provider_registry.py  provider_stats.py  providers.py  quality.py  request_gate_v3.py  research.py  routing.py  runtime_v3.py  search.py  search_locale.py  server.py  shadow_policy_v3.py  span_extraction_v3.py  state_migration_v3.py  state_store_v3.py  ui.py
web_search_plus_mcp/providers/: __init__.py  core.py  parallel.py  perplexity.py
web_search_plus_mcp/providers.d/: example_fixture.py  hound.py
web_search_plus_mcp/static/: index.html
wsp_sdk/: __init__.py  api.py  conformance.py  errors.py
