[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-search-plus-mcp"
version = "0.12.0"
description = "Registry-backed multi-provider web search, extraction, quality reports, and onboarding for MCP clients"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
ui = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "python-multipart>=0.0.6"]

[project.scripts]
web-search-plus-mcp = "web_search_plus_mcp.server:cli_main"

[project.urls]
Homepage = "https://github.com/robbyczgw-cla/web-search-plus-mcp"
Repository = "https://github.com/robbyczgw-cla/web-search-plus-mcp"

[tool.hatch.build.targets.wheel]
packages = ["web_search_plus_mcp"]
include = [
  "web_search_plus_mcp/static/*",
  "web_search_plus_mcp/static/**/*",
]
