[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "web_search_plus_mcp/schemas"
"docs/MIGRATION_1_0.md" = "web_search_plus_mcp/docs/MIGRATION_1_0.md"

[project]
name = "web-search-plus-mcp"
version = "1.0.0"
description = "Source-only multi-provider web search, extraction, evidence receipts, and onboarding for MCP clients"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
test = [
  "pytest",
  "ruff",
  "tomli; python_version < '3.11'",
]

[project.scripts]
web-search-plus-mcp = "web_search_plus_mcp.server:cli_main"

[project.urls]
Homepage = "https://github.com/robbyczgw-cla/web-search-plus-mcp"
Repository = "https://github.com/robbyczgw-cla/web-search-plus-mcp"
